public/stylesheets/msg_style.css
.msg_slideshow {
  width: 400px;
  height: 400px;
  padding: 10px;
  position: relative;
  overflow: hidden;
  background: #101010 url(../icons/loading.gif) no-repeat center center;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  border-radius: 10px; }
  .msg_slideshow a {
    outline: none; }
    .msg_slideshow a img {
      border: none; }

.msg_wrapper {
  width: 400px;
  height: 400px;
  position: relative;
  margin: 0;
  padding: 0;
  display: table-cell;
  text-align: center;
  vertical-align: middle; }
  .msg_wrapper img {
    display: inline-block !important;
    vertical-align: middle;
    -moz-box-shadow: 0px 0px 10px black;
    -webkit-box-shadow: 0px 0px 10px black;
    box-shadow: 0px 0px 10px black; }

.msg_controls {
  position: absolute;
  bottom: 15px;
  right: -110px;
  width: 104px;
  height: 26px;
  z-index: 20;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  background-color: black;
  opacity: 0.8;
  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=80); }
  .msg_controls a {
    float: left;
    background-color: black;
    width: 20px;
    height: 20px;
    margin: 3px 3px;
    opacity: 0.5;
    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=50);
    background-repeat: no-repeat;
    background-position: center center; }
    .msg_controls a:hover {
      opacity: 1;
      filter: progid:DXImageTransform.Microsoft.Alpha(opacity=99); }
    .msg_controls a.msg_grid {
      background-image: url(../icons/grid.png); }
    .msg_controls a.msg_prev {
      background-image: url(../icons/prev.png); }
    .msg_controls a.msg_next {
      background-image: url(../icons/next.png); }
    .msg_controls a.msg_pause {
      background-image: url(../icons/pause.png); }
    .msg_controls a.msg_play {
      background-image: url(../icons/play.png); }

.msg_thumbs {
  background: black;
  position: absolute;
  width: 250px;
  height: 166px;
  top: -230px;
  left: 50%;
  padding: 30px;
  margin: 0 0 0 -155px;
  -moz-border-radius: 0px 0px 10px 10px;
  -webkit-border-bottom-left-radius: 10px;
  -webkit-border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  -moz-box-shadow: 1px 1px 5px black;
  -webkit-box-shadow: 1px 1px 5px black;
  box-shadow: 1px 1px 5px black;
  opacity: 0.9;
  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=90);
  overflow: hidden; }

.msg_thumb_wrapper {
  position: absolute;
  width: 250px;
  height: 166px;
  top: 30px;
  left: 30px;
  z-index: 30; }
  .msg_thumb_wrapper a {
    display: block;
    width: 75px;
    height: 75px;
    float: left;
    margin: 4px;
    opacity: 0.5;
    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=50); }

.msg_thumbs a.msg_thumb_next, .msg_thumbs a.msg_thumb_prev {
  width: 18px;
  height: 20px;
  background-repeat: no-repeat;
  background-position: center center;
  position: absolute;
  top: 50%;
  margin-top: -10px;
  opacity: 0.5;
  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=50); }
.msg_thumbs a.msg_thumb_next:hover, .msg_thumbs a.msg_thumb_prev:hover {
  opacity: 1;
  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=99); }
.msg_thumbs a.msg_thumb_next {
  background-image: url(../icons/next_thumb.png);
  right: 5px; }
.msg_thumbs a.msg_thumb_prev {
  background-image: url(../icons/prev_thumb.png);
  left: 5px; }
.msg_thumbs a.msg_thumb_close {
  position: absolute;
  bottom: 0px;
  width: 50px;
  left: 50%;
  margin: 0 0 0 -25px;
  background: #202020 url(../icons/up.png) no-repeat center center;
  height: 16px;
  opacity: 0.7;
  -moz-border-radius: 5px 5px 0 0;
  -webkit-border-top-left-radius: 5px;
  -webkit-border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px; }
  .msg_thumbs a.msg_thumb_close:hover {
    opacity: 1;
    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=99); }

.msg_loading {
  position: absolute;
  background: transparent url(../icons/loading.gif) no-repeat center center;
  top: 50%;
  left: 50%;
  width: 50px;
  height: 50px;
  margin: -25px 0 0 -25px;
  z-index: 25;
  display: none; }

